// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DateSelector > should render correctly when disabled 1`] = `
<div
  className="govuk-form-group"
>
  <div
    className="govuk-form-group govuk-!-margin-bottom-0"
    id="field-1"
  >
    <label
      className="govuk-label govuk-label--s"
      htmlFor="field-1-input"
    >
      Start date
    </label>
    <div
      className="govuk-date-input flex items-center [&_.MuiSvgIcon-root]:fill-govBlue"
    >
      <div
        className="govuk-date-input__item govuk-!-margin-right-0"
      >
        <div
          className=""
        >
          <input
            className="govuk-input govuk-date-input__input govuk-input--width-6"
            disabled={true}
            id="field-1-input"
            name="field1"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="N/A"
            type="tel"
            value=""
          />
        </div>
      </div>
      <div
        className="MuiInputAdornment-root MuiInputAdornment-positionEnd css-1laqsz7-MuiInputAdornment-root"
      >
        <button
          aria-label="Choose date"
          className="MuiButtonBase-root Mui-disabled MuiIconButton-root Mui-disabled MuiIconButton-edgeEnd MuiIconButton-sizeMedium css-1yq5fb3-MuiButtonBase-root-MuiIconButton-root"
          disabled={true}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={-1}
          type="button"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="CalendarIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DateSelector > should render correctly with an input 1`] = `
<div
  className="govuk-form-group"
>
  <div
    className="govuk-form-group govuk-!-margin-bottom-0"
    id="field-1"
  >
    <label
      className="govuk-label govuk-label--s"
      htmlFor="field-1-input"
    >
      Start date
    </label>
    <div
      className="govuk-date-input flex items-center [&_.MuiSvgIcon-root]:fill-govBlue"
    >
      <div
        className="govuk-date-input__item govuk-!-margin-right-0"
      >
        <div
          className=""
        >
          <input
            className="govuk-input govuk-date-input__input govuk-input--width-6"
            disabled={false}
            id="field-1-input"
            name="field1"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="DD/MM/YYYY"
            type="tel"
            value="01/01/2024"
          />
        </div>
      </div>
      <div
        className="MuiInputAdornment-root MuiInputAdornment-positionEnd css-1laqsz7-MuiInputAdornment-root"
      >
        <button
          aria-label="Choose date, selected date is Jan 1, 2024"
          className="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium css-1yq5fb3-MuiButtonBase-root-MuiIconButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="CalendarIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DateSelector > should render correctly with errors 1`] = `
<div
  className="govuk-form-group govuk-form-group--error"
>
  <div
    className="govuk-form-group govuk-!-margin-bottom-0"
    id="field-1"
  >
    <label
      className="govuk-label govuk-label--s"
      htmlFor="field-1-input"
    >
      Start date
    </label>
    <div
      className="govuk-date-input flex items-center [&_.MuiSvgIcon-root]:fill-govBlue"
    >
      <div
        className="govuk-date-input__item govuk-!-margin-right-0"
      >
        <div
          className=""
        >
          <span
            className="govuk-error-message"
            id="field1-error"
          >
            <span
              className="govuk-visually-hidden"
            >
              Error: 
            </span>
            There was an error
          </span>
          <input
            aria-describedby="field1-error"
            className="govuk-input govuk-date-input__input govuk-input--width-6 govuk-input--error"
            disabled={false}
            id="field-1-input"
            name="field1"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="DD/MM/YYYY"
            type="tel"
            value=""
          />
        </div>
      </div>
      <div
        className="MuiInputAdornment-root MuiInputAdornment-positionEnd css-1laqsz7-MuiInputAdornment-root"
      >
        <button
          aria-label="Choose date"
          className="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium css-1yq5fb3-MuiButtonBase-root-MuiIconButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="CalendarIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z"
            />
          </svg>
          <span
            className="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
          />
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`DateSelector > should render correctly with no input 1`] = `
<div
  className="govuk-form-group"
>
  <div
    className="govuk-form-group govuk-!-margin-bottom-0"
    id="field-1"
  >
    <label
      className="govuk-label govuk-label--s"
      htmlFor="field-1-input"
    >
      Start date
    </label>
    <div
      className="govuk-date-input flex items-center [&_.MuiSvgIcon-root]:fill-govBlue"
    >
      <div
        className="govuk-date-input__item govuk-!-margin-right-0"
      >
        <div
          className=""
        >
          <input
            className="govuk-input govuk-date-input__input govuk-input--width-6"
            disabled={false}
            id="field-1-input"
            name="field1"
            onBlur={[Function]}
            onChange={[Function]}
            placeholder="DD/MM/YYYY"
            type="tel"
            value=""
          />
        </div>
      </div>
      <div
        className="MuiInputAdornment-root MuiInputAdornment-positionEnd css-1laqsz7-MuiInputAdornment-root"
      >
        <button
          aria-label="Choose date"
          className="MuiButtonBase-root MuiIconButton-root MuiIconButton-edgeEnd MuiIconButton-sizeMedium css-1yq5fb3-MuiButtonBase-root-MuiIconButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="CalendarIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M17 12h-5v5h5v-5zM16 1v2H8V1H6v2H5c-1.11 0-1.99.9-1.99 2L3 19c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2h-1V1h-2zm3 18H5V8h14v11z"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;
